# ComfyUI-Feixue-UniversalMonitor

./: .comfyignore  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  install.py  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-bridge.yml  ci.yml  codeql-analysis.yml  nightly.yml  publish.yml  release.yml
benchmarks/: cpu_collector_benchmark.py
bridge/: CMakeLists.txt  feixue_adlx_bridge.cpp  feixue_adlx_bridge.h
collectors/: __init__.py  base.py  cpu_collector.py  memory_collector.py  predictor.py  proc_stat_collector.py
collectors/gpu_providers/: __init__.py  _pynvml_common.py  amd_adl_provider.py  amd_adlx_provider.py  amd_rocm_provider.py  amd_smi_provider.py  amd_sysfs_provider.py  dxgi_provider.py  nvidia_nvml_provider.py  nvidia_provider.py  windows_pdh_provider.py
collectors/providers/: __init__.py
collectors/providers/amd/: __init__.py
collectors/providers/generic/: __init__.py
collectors/providers/nvidia/: __init__.py
config/: __init__.py  config.json  config_manager.py
core/: data_models.py  memory_cleaner.py  monitor.py  websocket_service.py
demo/: index.html
docs/: index.html
fxm_utils/: __init__.py  performance_optimizations.py  platform_detect.py  thread_safe.py
libs/: README.txt
providers/amd/: __init__.py  linux_amd.py  optimized_sysfs.py  windows_amd.py
providers/generic/: __init__.py
providers/nvidia/: __init__.py
tests/: test_feixue_monitor.py
tools/: provider_accuracy_test.py  test_fallback.py
utils/: performance_optimizations.py  platform_detect.py  thread_safe.py
web/: extension.js  monitor.css
web/components/: hover-panel.js  top-menu-bar.js
web/core/: config-manager.js  event-emitter.js
web/js/: animations.js  monitor.js
web/renderers/: canvas-renderer.js
web/services/: websocket-service.js
web/styles/: animations.css  base.css  variables.css
web/styles/components/: charts.css  hover-panel.css  metric-card.css  top-menu-bar.css
