[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-Feixue-UniversalMonitor"
version = "3.40.7"
description = "飞雪监测器 — Premium UI 实时硬件监测，AMD GPU 优化"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Feixue", email = "feixue@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
]
optional-dependencies = {dev = ["pytest>=7.0", "pytest-cov>=4.0"]}

[project.urls]
Repository = "https://github.com/feixue-ai/ComfyUI-Feixue-UniversalMonitor"

[tool.setuptools.packages.find]
include = ["core*", "collectors*", "fxm_utils*", "config*"]

[tool.comfy]
PublisherId = "feixue"
DisplayName = "飞雪监测器 - Feixue Universal Monitor"
Icon = "https://raw.githubusercontent.com/feixue-ai/ComfyUI-Feixue-UniversalMonitor/main/feixue-icon.png"
Description = "飞雪监测器 (Feixue Universal Monitor) — v3.40.7 零依赖原生硬件监测. Real-time hardware monitor for ComfyUI. Monitor GPU utilization, VRAM, CPU, RAM, swap memory, GPU temperature, disk I/O, and network speed. Zero pip dependency on Windows: uses AMD ADLX C++ Bridge DLL, AMD ADL (atiadlxx.dll), NVIDIA NVML (nvml.dll), and Windows PDH/DXGI counters. On Linux: sysfs direct AMDGPU kernel-driver read first (zero ROCm dependency), then libamd_smi.so ctypes / rocm-smi / NVML. Removed inaccurate fallback methods (WMI/pynvml-amd-windows) and fan monitoring. Features: premium UI design, WebSocket real-time push, position memory, smart memory cleanup. Keywords: feixue, monitor, hardware, gpu, vram, cpu, ram, temperature, system, resource, performance, amd, rocm, nvidia, widget, overlay, status, dashboard, swap, disk, network, style, theme."

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "windows: marks tests as Windows-only",
    "linux: marks tests as Linux-only",
    "requires_gpu: marks tests that need a physical GPU"
]
