[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-Feixue-UniversalMonitor"
version = "3.40.8"
description = "ComfyUI Hardware Monitor — Feixue Universal Monitor: real-time GPU/CPU/RAM monitoring for ComfyUI, AMD optimized."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Feixue", email = "feixue@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
]
optional-dependencies = {dev = ["pytest>=7.0", "pytest-cov>=4.0"]}

[project.urls]
Repository = "https://github.com/feixue-ai/ComfyUI-Feixue-UniversalMonitor"

[tool.setuptools.packages.find]
include = ["core*", "collectors*", "fxm_utils*", "config*"]

[tool.comfy]
PublisherId = "feixue"
DisplayName = "飞雪监测器 - Feixue Universal Monitor"
Icon = "https://raw.githubusercontent.com/feixue-ai/ComfyUI-Feixue-UniversalMonitor/main/feixue-icon.png"
Description = "ComfyUI Hardware Monitor (Feixue Universal Monitor / 飞雪监测器) — v3.40.8 real-time hardware monitor for ComfyUI. Track GPU utilization, VRAM, CPU, RAM, swap memory, GPU temperature, disk I/O, and network speed. Zero pip dependency on Windows: AMD ADLX C++ Bridge DLL, AMD ADL (atiadlxx.dll), NVIDIA NVML (nvml.dll), PDH/DXGI counters. On Linux: sysfs AMDGPU kernel-driver read first (zero ROCm dependency), then libamd_smi.so ctypes / rocm-smi / NVML. Premium UI with 5 colors × 5 styles, WebSocket real-time push, position memory, smart memory cleanup. Keywords: comfyui monitor, comfyui hardware monitor, gpu monitor, system monitor, hardware monitor, feixue, monitor, gpu, vram, cpu, ram, temperature, system, resource, performance, amd, rocm, nvidia, widget, overlay, status, dashboard, swap, disk, network, style, theme."

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "windows: marks tests as Windows-only",
    "linux: marks tests as Linux-only",
    "requires_gpu: marks tests that need a physical GPU"
]
